--- a/billiejean_projectB/css/styles.css
+++ b/billiejean_projectB/css/styles.css
@@ -13,10 +13,22 @@ div {
   height: 100%;
 }
 
+.navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.btn {
+  margin: 20px;
+  padding: 10px;
+}
+
 .container {
   margin: 20px;
-  width: 238px;
-  height: 333px;
+  width: 138px;
+  height: 222px;
   perspective: 1000px;
 }
 
@@ -36,30 +48,30 @@ div {
 }
 
 .front {
-  border-radius: 25px;
-  border: 2px solid black;
-  background: rgb(255, 255, 0);
+  border-radius: 20px;
+  border: 5px solid rgb(164, 0, 247);
+  background: rgb(255, 221, 0);
   /**background-color: rgb(255, 225, 0);**/
-  /**background: url("http://placehold.it/100x100");**/
+  background: url("media/img/card2.png");
 }
 
 .front:hover {
   bottom: 2px;
   left: 2px;
-  box-shadow: 0px 0px 20px 1px #000;
+  box-shadow: 0px 0px 20px 1px rgb(185, 22, 185);
 }
 
 .back {
-  border-radius: 25px;
-  border: 2px solid black;
-  background: rgb(255, 255, 0);
-  /**background-color: rgb(255, 225, 0);**/
-  /**background: url("http://placehold.it/100x100");**/
+  border-radius: 20px;
+  border: 5px solid rgb(164, 0, 247);
+  background: rgb(165, 0, 251);
+  align-items: center;
+  /**background: url("media/img/card2.png");**/
   transform: rotateY(180deg);
 }
 
 .back:hover {
   bottom: 2px;
-  right: 2px;
-  box-shadow: 0px 0px 20px 1px #000;
+  left: 2px;
+  box-shadow: 0px 0px 20px 1px rgb(185, 22, 185);
 }
