--- a/billiejean_projectB/css/index.css
+++ b/billiejean_projectB/css/index.css
@@ -23,6 +23,16 @@ canvas {
   z-index: -1;
 }
 
+.example {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+
+  transform: translate (- 50%, -50% );
+  width: 200px;
+  height: 200px;
+}
+
 .navigation {
   display: flex;
   justify-content: center;
@@ -77,8 +87,11 @@ canvas {
   border: 5px solid rgb(164, 0, 247);
   background: rgb(165, 0, 251);
   align-items: center;
-  /**background: url("media/img/card2.png");**/
   transform: rotateY(180deg);
+}
+
+.lyra {
+  background: url("media/img/y-lyra.png");
 }
 
 .back:hover {
