--- a/billiejean_final.projectB/css/page1.css
+++ b/billiejean_final.projectB/css/page1.css
@@ -6,13 +6,14 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   justify-content: space-around;
   align-items: center;
   text-align: center;
   flex-wrap: wrap;
   background-color: rgb(255, 255, 244);
+
 }
 
 canvas {
@@ -71,8 +72,13 @@ canvas {
   height: 138px;
   /**/
   border-radius: 20px;
-  border: 5px solid rgb(245, 212, 0);
-  background: rgb(255, 221, 0);
+  border: 5px solid rgb(118, 118, 118);
+  background: rgb(136, 136, 136);
+  /**/
+  font-size: 40px;
+  font-family: "Comfortaa";
+  color: rgb(233, 231, 222);
+  font-weight: bold;
 }
 
 .mbtn:hover {
@@ -162,4 +168,29 @@ tr.spaceUnder>td {
   border: 5px solid rgb(245, 212, 0);
   background-image: url("media/img/card1.png");
   box-shadow: 0px 0px 20px 1px rgb(185, 22, 185);
+}
+
+.wrapPosition::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  background-image: url('media/img/bkg_index-1.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  z-index: -1;
+}
+
+.bkgContent {
+  position: relative;
+  z-index: -1;
 }
