--- a/billiejean_final.projectB/css/page1.css
+++ b/billiejean_final.projectB/css/page1.css
@@ -28,20 +28,6 @@ canvas {
   z-index: -1;
 }
 
-.wrapper {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  bottom: 400px;
-  width: 800px;
-  height: 222px;
-  /**/
-  border-radius: 20px;
-  background-image: url("media/img/textbox.png");
-}
-
 #mDock {
   position: fixed;
   bottom: 0;
@@ -95,8 +81,33 @@ canvas {
   align-items: center;
 }
 
+#deck {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  bottom: 50px;
+  width: 600px;
+  height: 600px;
+  /**/
+  border-radius: 20px;
+  background-image: url("media/img/textbox.png");
+  background-repeat: no-repeat;
+  transform: scale(0.90);
+}
+
+#display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 400px;
+  height: 400px;
+}
+
 #text {
-  font-size: 60px;
+  font-size: 30px;
   font-family: "Comfortaa";
   color: rgb(106, 106, 106);
 }
@@ -135,7 +146,7 @@ tr.spaceUnder>td {
   /**/
   border-radius: 20px;
   border: 5px solid rgba(175, 148, 59, 0);
-  background-image: url("media/img/card3-3.png");
+  background-image: url("media/img/card3-2.png");
   background-position: center;
 
   /**/
